--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint && pnpm run types:check",
     "lint:fix": "next lint --fix",
+    "types:check": "tsc",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test": "jest",
