--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write ."
+    ]
   },
   "dependencies": {
     "@tanstack/react-query": "^5.75.7",
@@ -43,9 +50,11 @@
     "eslint-config-next": "^15.3.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.1.7",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^16.1.0",
     "prettier": "^3.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
